welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var next: Int = 0;
	var taille: Int = nums.length;
	var n: Int = 0;
	var ok: Boolean = false;
	for(n <- 0 to taille - 1){
		if(nums(n) == 6 && next == 0){
			next = 1;
		}
		else if(nums(n) == 6 && next == 1){
			next = 2;
		}
		else if(nums(n) == 7 &&  next == 2){
			ok = true;
		}
		else{
			next = 0;
		}
	}
	return ok;
	
}

}
